force-app/main/default/objects/Lead/fields/Email_Communications_Consent__c.field-meta.xml
<CustomField>
    <fullName>Email_Communications_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Communications Consent</label>
    <type>Checkbox</type>
</CustomField>