force-app/main/default/objects/Lead/fields/Interested__c.field-meta.xml
<CustomField>
    <fullName>Interested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>those who are interested in the marketing campaign</description>
    <label>Interested</label>
    <type>Checkbox</type>
</CustomField>