force-app/main/default/objects/Lead/fields/Lead_AI_Summary__c.field-meta.xml
<CustomField>
    <fullName>Lead_AI_Summary__c</fullName>
    <label>Lead AI Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>