force-app/main/default/objects/Lead/fields/Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Id__c</fullName>
    <description>This field is created to map the lead id fields to person accounts as Lead id values are being used as subscriber keys in Marketing Cloud</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscriber Key</label>
    <type>Text</type>
</CustomField>