force-app/main/default/objects/Lead/fields/Net_Worth__c.field-meta.xml
<CustomField>
    <fullName>Net_Worth__c</fullName>
    <description>The Net Worth field represents the total financial value of an individual, company, or account.</description>
    <label>Net Worth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>