force-app/main/default/objects/Lead/fields/Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Referred_By__c</fullName>
    <description>The Referred By field captures information about the person or source that referred the lead to your organization.</description>
    <label>Referred By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>